--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,11 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorAccentTrans">#50D81B60</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="darkGrey">#374256</color>
+    <color name="darkGreyTrans">#90374256</color>
+    <color name="pink">#ffabe9</color>
+    <color name="blue">#1c5bf3</color>
+    <color name="brown">#cc6935</color>
 </resources>
