--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,7 +9,6 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="dimens_2dp">2dp</dimen>
     <dimen name="dimens_40dp">40dp</dimen>
     <dimen name="dimens_30dp">30dp</dimen>
     <dimen name="dimens_20dp">20dp</dimen>
@@ -18,4 +17,12 @@
     <dimen name="dimens_10dp">10dp</dimen>
     <dimen name="dimens_18sp">18sp</dimen>
     <dimen name="dimens_16sp">16sp</dimen>
+    <dimen name="text_18sp">18sp</dimen>
+    <dimen name="dimens_25dp">25dp</dimen>
+    <dimen name="dimens_2dp">2dp</dimen>
+    <dimen name="dimens_5dp">5dp</dimen>
+    <dimen name="dimens_130dp">130dp</dimen>
+    <dimen name="dimens_12sp">12sp</dimen>
+    <dimen name="dimens_100dp">100dp</dimen>
+    <dimen name="dimens_15dp">15dp</dimen>
 </resources>
