--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,5 @@
     <dimen name="dimens_12sp">12sp</dimen>
     <dimen name="dimens_100dp">100dp</dimen>
     <dimen name="dimens_15dp">15dp</dimen>
+    <dimen name="text_20sp">20sp</dimen>
 </resources>
