--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,4 +26,5 @@
     <dimen name="dimens_100dp">100dp</dimen>
     <dimen name="dimens_15dp">15dp</dimen>
     <dimen name="text_20sp">20sp</dimen>
+    <dimen name="dimens_120dp">120dp</dimen>
 </resources>
